@@ -32,6 +32,7 @@ importer = builtins.__import__
 from contextlib import contextmanager
 from functools import wraps
 import importlib
+import shutil
 from unittest import mock
 import os
 import warnings
@@ -81,11 +82,8 @@ def executable_not_found(*args):
 
     @dec.skipif(executable_not_found("binary_name"), msg="skip test because binary_name not available")
     """
-    # This must come here so that MDAnalysis isn't imported prematurely,
-    #  which spoils coverage accounting (see Issue 344).
-    import MDAnalysis.lib.util
     for name in args:
-        if MDAnalysis.lib.util.which(name) is not None:
+        if shutil.which(name) is not None:
             return False
     return True
 
