@@ -55,6 +55,8 @@ Changes
     `analysis.nucleicacids.WatsonCrickDist.results.distances` (Issue #3720, PR #3735)
 
 Deprecations
+  * MDAnalysis.lib.util is deprecated and will be removed in version 3.0
+    (Issue #3649)
   * The TRZ reader & writer are deprecated and will be removed in version 3.0
     (PR #4335)
   * X3DNA has been deprecated and will be removed in 3.0.0 (Issue #3788)
